--- a/正.html
+++ b/正.html
@@ -11,16 +11,16 @@
     ">
 
     <style>
-        /* header logo區 */
+        /* header logo區 (logo大小) */
         #logo {
-            padding: 5px;
+            padding: 10px;
             width: 10%;
         }
 
-        /* 主要圖片區(封面+標誌) */
+        /* 主要圖片區(S1+封面照+標誌) */
         #big {
             position: relative;
-            width: 50vw;
+            width: 60vw;
             height: auto;
         }
 
@@ -36,40 +36,27 @@
             top: 150px;
         }
 
-        /* 攝影師作品 */
+        /* 攝影師作品 (S2+照片) */
         #work {
-            border: 3px solid blue;
-            position: relative;
-            height: 60vh;
+            /* border: 3px solid blue; */
+            display: flex;
+            justify-content: center;
+            /* 水平置中 */
+            align-items: center;
+            /* 垂直置中 */
         }
 
         #photos img {
-            max-width: 500px;
-            /* 限制圖片最大寬度 */
+            max-width: 50%;
             height: auto;
             /* 保持圖片比例 */
-            margin: 10px;
-            /* 每張圖片周圍的間距 */
+            margin: 0 auto;
+            /* 確保水平置中 */
         }
 
-        /* #photos {
-            display: flex;
-            justify-content: center;
-             水平置中 
-             align-items: center; 
-            垂直置中 
-             flex-wrap: nowrap; 
-             如果圖片過多，允許換行 
-             gap: 20px; 
-             圖片間距 
-         }  */
+        /* 介紹網頁 */
 
-        /* #work {
-            text-align: center;
-            padding: 20px;
-            border: 3px solid red;
-            用來顯示邊界，方便確認效果
-        } */
+
     </style>
 </head>
 
@@ -86,25 +73,25 @@
     <main>
         <!-- 主要圖片區(封面+標誌) -->
         <section id="big" style="border: 3px solid black;">
-            <div><img id="bphoto" src="./img/tower.jpeg">
+            <div><img id="bphoto" src="./img/貓.JPG">
                 <h1 style="display: inline-block;">Photer</h1> <!--改成圖片-->
             </div>
         </section>
 
         <br>
 
-        <!-- 攝影師作品 -->
+        <!-- 攝影師作品輪播 -->
         <section id="work">
             <div id="photos" class="carousel slide carousel-fade" data-bs-interval="2000" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/river.jpeg" class="d-block w-100">
+                        <img src="./img/李河南.JPG" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/street.jpeg" class="d-block w-100">
+                        <img src="./img/氣球.JPG" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/tower2.jpeg" class="d-block w-100">
+                        <img src="./img/神具店.JPG" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#photos" data-bs-slide="prev">
