--- a/正.html
+++ b/正.html
@@ -27,6 +27,10 @@
             width: 10%;
         }
 
+        header {
+            background-color: rgba(189, 236, 142, 0.733);
+        }
+
         /* 主要圖片區(S1+封面照+標誌) */
         #big {
             display: flex;
@@ -105,7 +109,7 @@
 
         /* footer 頁尾 */
         #foot {
-            background-color: rgba(181, 202, 160, 0.5);
+            background-color: rgba(189, 236, 142, 0.733);
             display: block;
             height: 200px;
             width: auto;
@@ -115,7 +119,6 @@
         #foot>a>img {
             width: 25%;
         }
-        
     </style>
 </head>
 
