--- a/正.html
+++ b/正.html
@@ -127,7 +127,7 @@
     <header>
         <div>
             <a href="#">
-                <img id="logo" style="width: 10%;" src="./img/PhoterH1.png">
+                <img id="logo" style="width: 10%;" src="./img/LOGO2.png">
             </a>
         </div>
     </header>
