--- a/正.html
+++ b/正.html
@@ -13,22 +13,29 @@
     <style>
         /* 排版元素 */
         body {
-            background-color: rgb(255, 255, 251);
+            background-color: rgb(255, 250, 251);
+            /* background-color: #F5F5F5; */
         }
 
         #box {
             width: 100px;
-            height: 50px;
+            height: 30px;
         }
 
-        /* header logo區 (logo大小) */
-        #logo {
-            padding: 10px;
-            width: 10%;
-        }
+        /* header (logo+漢堡) */
+        /* header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 80px;
+            background-color: #5078A0;
+        } */
 
-        header {
-            background-color: rgba(189, 236, 142, 0.733);
+        #hbox {
+            max-height: 100%;
+            width: auto;
+            margin: 0 auto;
         }
 
         /* 主要圖片區(S1+封面照+標誌) */
@@ -50,7 +57,8 @@
         }
 
         h1 {
-            color: rgb(168, 216, 185);
+            /* color: #2A3D4C; */
+            color: #457B9D;
             font-size: 100px;
             position: absolute;
             display: inline;
@@ -109,7 +117,8 @@
 
         /* footer 頁尾 */
         #foot {
-            background-color: rgba(189, 236, 142, 0.733);
+            background-color: #14202c;
+            /* background-color: #5078A0; */
             display: block;
             height: 200px;
             width: auto;
@@ -125,19 +134,23 @@
 <body>
     <!-- header Logo-->
     <header>
-        <div>
-            <a href="#">
-                <img id="logo" style="width: 10%;" src="./img/LOGO2.png">
+        <div id="hbox">
+            <a href="#" id="a">
+                <!-- <img src="./img/LOGO2.png"> -->
             </a>
         </div>
     </header>
 
     <main>
         <!-- 主要圖片區S1(封面+標誌) -->
+
+        <div id="box"></div>
+
         <section id="big">
             <div id="s1"></div>
-            <div><img id="bphoto" src="./img/貓.JPG"></div>
-            <h1>Photer</h1> <!--改成圖片-->
+            <div><img id="bphoto" src="./img/櫻花富士山.jpg"></div>
+            <!--<h1>Photer</h1> 改成圖片-->
+            <!-- <div><img id="h1" src="./img/logo6.png" alt=""></div> -->
         </section>
 
         <div id="box"></div>
@@ -147,13 +160,13 @@
             <div id="photos" class="carousel slide carousel-fade" data-bs-interval="2000" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/李河南.JPG" class="d-block w-100">
+                        <img src="./img/飲料機.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/氣球.JPG" class="d-block w-100">
+                        <img src="./img/日街黃昏橫.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/神具店.JPG" class="d-block w-100">
+                        <img src="./img/一枝櫻花橫.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#photos" data-bs-slide="prev">
@@ -167,6 +180,7 @@
             </div>
         </section>
 
+        <div id="box"></div>
         <div id="box"></div>
 
         <!-- 攝影師一覽S3 -->
@@ -186,7 +200,7 @@
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
-                        <img src="./img/tower2.jpeg" class="img-fluid figure-img">
+                        <img src="./img/塔櫻花.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
@@ -198,7 +212,7 @@
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
-                        <img src="./img/通天閣+看板.JPG" class="img-fluid figure-img">
+                        <img src="./img/背影貓.JPG" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
@@ -242,8 +256,8 @@
     <footer>
         <section>
             <div id="foot">
-                <a href="#"><img src="./img/logo.png"></a>
-                <a href="#"><img src="./img/logo.png"></a>
+                <!-- <a href="#"><img src="./img/logo.png"></a>
+                <a href="#"><img src="./img/logo.png"></a> -->
             </div>
         </section>
 
