--- a/正.html
+++ b/正.html
@@ -13,6 +13,7 @@
     <style>
         /* 排版元素 */
         body {
+            /* background-color: #000000; */
             background-color: rgb(255, 250, 251);
             /* background-color: #F5F5F5; */
         }
@@ -22,7 +23,7 @@
             height: 30px;
         }
 
-        /* header (logo+漢堡) */
+        /* 1. header (logo+漢堡) */
         /* header {
             display: flex;
             justify-content: center;
@@ -38,26 +39,18 @@
             margin: 0 auto;
         }
 
-        /* 主要圖片區(S1+封面照+標誌) */
+        /* 2. 主要圖片區(S1+封面照+標誌) */
         #big {
             display: flex;
-            width: 65vw;
+            width: 100vw;
             height: auto;
-        }
-
-        #s1 {
-            display: flex;
-            width: 25vh;
-            left: 30%;
         }
 
         #bphoto {
             max-width: 100%;
             padding: 3px;
         }
-
-        h1 {
-            /* color: #2A3D4C; */
+             color: #2A3D4C; 
             color: #457B9D;
             font-size: 100px;
             position: absolute;
@@ -65,9 +58,17 @@
             text-align: center;
             top: 20%;
             right: 20%;
+        }*/
+        
+        /* 3. 照片一覽(S2)+(S4) */
+        #manbox {
+            display: flex;
+            width: 100vw;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* 攝影師作品輪播 (S2+照片) */
+        /* 4. 照片輪播 (S3+照片) */
         #work {
             display: flex;
             justify-content: center;
@@ -84,15 +85,7 @@
             /* 確保水平置中 */
         }
 
-        /* 攝影師一覽(S3) */
-        #manbox {
-            display: flex;
-            width: 100vw;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* 介紹網頁 (S4+img+介紹) */
+        /* 6. 介紹網頁 (S5+img+介紹) */
         #bbox {
             display: flex;
             margin-left: 10px;
@@ -115,7 +108,7 @@
             margin-right: 0;
         }
 
-        /* footer 頁尾 */
+        /* 7. footer 頁尾(S6) */
         #foot {
             background-color: #14202c;
             /* background-color: #5078A0; */
@@ -132,7 +125,7 @@
 </head>
 
 <body>
-    <!-- header Logo-->
+    <!-- 1. header (Logo+漢堡)-->
     <header>
         <div id="hbox">
             <a href="#" id="a">
@@ -142,20 +135,50 @@
     </header>
 
     <main>
-        <!-- 主要圖片區S1(封面+標誌) -->
+        <!-- 2. 主要圖片區(S1+封面+標誌) -->
 
         <div id="box"></div>
 
         <section id="big">
-            <div id="s1"></div>
-            <div><img id="bphoto" src="./img/櫻花富士山.jpg"></div>
+            <!-- <div id="s1"></div> -->
+            <div><img id="bphoto" src="./img/石頭海爆改2.jpg"></div>
+            <!-- <div><img src="./img/海邊女背影.jpg"></div> -->
             <!--<h1>Photer</h1> 改成圖片-->
             <!-- <div><img id="h1" src="./img/logo6.png" alt=""></div> -->
         </section>
 
         <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
-        <!-- 攝影師作品輪播S2 -->
+        <!-- 3. 照片一覽(S2) -->
+        <section>
+            <div id="manbox" class="row">
+                <div id="man" class="col-4">
+                    <figure class="figure">
+                        <img src="./img/海邊橘草.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">河</figcaption>
+                    </figure>
+                </div>
+                <div id="man" class="col-4">
+                    <figure class="figure">
+                        <img src="./img/海灘兩人.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">街</figcaption>
+                    </figure>
+                </div>
+                <div id="man" class="col-4">
+                    <figure class="figure ">
+                        <img src="./img/海邊一人.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">塔</figcaption>
+                    </figure>
+                </div>                
+            </div>
+        </section>
+
+        <div id="box"></div>
+        <div id="box"></div>
+
+        <!-- 4. 照片輪播(S3) -->
         <section id="work">
             <div id="photos" class="carousel slide carousel-fade" data-bs-interval="2000" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -163,10 +186,10 @@
                         <img src="./img/飲料機.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/日街黃昏橫.jpg" class="d-block w-100">
+                        <img src="./img/Paul's.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/一枝櫻花橫.jpg" class="d-block w-100">
+                        <img src="./img/紅房子.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#photos" data-bs-slide="prev">
@@ -182,20 +205,33 @@
 
         <div id="box"></div>
         <div id="box"></div>
+        <div id="box"></div>
 
-        <!-- 攝影師一覽S3 -->
+        <!-- 5. 照片一覽(S4) -->
         <section>
             <div id="manbox" class="row">
                 <div id="man" class="col-2">
                     <figure class="figure">
-                        <img src="./img/river.jpeg" class="img-fluid figure-img">
+                        <img src="./img/側面櫻花直.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">河</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure">
-                        <img src="./img/street.jpeg" class="img-fluid figure-img">
+                        <img src="./img/狗狗門.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">街</figcaption>
+                    </figure>
+                </div>
+                <div id="man" class="col-2">
+                    <figure class="figure ">
+                        <img src="./img/波西米亞.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">塔</figcaption>
+                    </figure>
+                </div>
+                <div id="man" class="col-2">
+                    <figure class="figure ">
+                        <img src="./img/風車塔.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
@@ -206,13 +242,7 @@
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
-                        <img src="./img/月亮廢墟.JPG" class="img-fluid figure-img">
-                        <figcaption class="figure-caption">塔</figcaption>
-                    </figure>
-                </div>
-                <div id="man" class="col-2">
-                    <figure class="figure ">
-                        <img src="./img/背影貓.JPG" class="img-fluid figure-img">
+                        <img src="./img/檸檬底片.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
@@ -220,8 +250,10 @@
         </section>
 
         <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
-        <!-- 介紹網頁S4 -->
+        <!-- 6. 介紹網頁(S5) -->
         <section>
             <div id="introbox">
                 <div id="bbox">
@@ -252,7 +284,7 @@
     <div id="box"></div>
 
 
-    <!-- footer 頁尾聯絡方式-->
+    <!-- 7. footer 頁尾聯絡方式(S6)-->
     <footer>
         <section>
             <div id="foot">
