--- a/正.html
+++ b/正.html
@@ -50,16 +50,19 @@
             max-width: 100%;
             padding: 3px;
         }
-             color: #2A3D4C; 
-            color: #457B9D;
-            font-size: 100px;
-            position: absolute;
-            display: inline;
-            text-align: center;
-            top: 20%;
-            right: 20%;
-        }*/
-        
+
+        color: #2A3D4C;
+        color: #457B9D;
+        font-size: 100px;
+        position: absolute;
+        display: inline;
+        text-align: center;
+        top: 20%;
+        right: 20%;
+        }
+
+        */
+
         /* 3. 照片一覽(S2)+(S4) */
         #manbox {
             display: flex;
@@ -86,6 +89,10 @@
         }
 
         /* 6. 介紹網頁 (S5+img+介紹) */
+        #intro {
+            background-color: #030608;
+        }
+
         #bbox {
             display: flex;
             margin-left: 10px;
@@ -102,10 +109,20 @@
             max-width: 50vw;
         }
 
+        #left {
+            clip-path: ellipse(60% 50% at 50% 50%);
+            /* 裁剪左右，保留上下 */
+            object-fit: cover;
+            /* 確保圖片不變形 */
+            margin-left: 30px;
+        }
+
         #right {
+            clip-path: circle(50%);
             display: block;
+            width: 40%;
             margin-left: auto;
-            margin-right: 0;
+            margin-right: 20px;
         }
 
         /* 7. footer 頁尾(S6) */
@@ -156,7 +173,7 @@
             <div id="manbox" class="row">
                 <div id="man" class="col-4">
                     <figure class="figure">
-                        <img src="./img/海邊橘草.jpg" class="img-fluid figure-img">
+                        <img src="./img/海邊一人.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">河</figcaption>
                     </figure>
                 </div>
@@ -168,10 +185,10 @@
                 </div>
                 <div id="man" class="col-4">
                     <figure class="figure ">
-                        <img src="./img/海邊一人.jpg" class="img-fluid figure-img">
+                        <img src="./img/眼鏡趴著女.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
-                </div>                
+                </div>
             </div>
         </section>
 
@@ -180,16 +197,16 @@
 
         <!-- 4. 照片輪播(S3) -->
         <section id="work">
-            <div id="photos" class="carousel slide carousel-fade" data-bs-interval="2000" data-bs-ride="carousel">
+            <div id="photos" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <img src="./img/櫻花富士山.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/苔癬.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
                         <img src="./img/飲料機.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/Paul's.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/紅房子.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#photos" data-bs-slide="prev">
@@ -212,37 +229,37 @@
             <div id="manbox" class="row">
                 <div id="man" class="col-2">
                     <figure class="figure">
-                        <img src="./img/側面櫻花直.jpg" class="img-fluid figure-img">
+                        <img src="./img/波西米亞.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">河</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure">
-                        <img src="./img/狗狗門.jpg" class="img-fluid figure-img">
+                        <img src="./img/側面櫻花直.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">街</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
-                        <img src="./img/波西米亞.jpg" class="img-fluid figure-img">
+                        <img src="./img/狗狗門.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
-                        <img src="./img/風車塔.jpg" class="img-fluid figure-img">
-                        <figcaption class="figure-caption">塔</figcaption>
-                    </figure>
-                </div>
-                <div id="man" class="col-2">
-                    <figure class="figure ">
-                        <img src="./img/塔櫻花.jpg" class="img-fluid figure-img">
+                        <img src="./img/滑板女.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
                 <div id="man" class="col-2">
                     <figure class="figure ">
                         <img src="./img/檸檬底片.jpg" class="img-fluid figure-img">
+                        <figcaption class="figure-caption">塔</figcaption>
+                    </figure>
+                </div>
+                <div id="man" class="col-2">
+                    <figure class="figure ">
+                        <img src="./img/風車塔.jpg" class="img-fluid figure-img">
                         <figcaption class="figure-caption">塔</figcaption>
                     </figure>
                 </div>
@@ -257,23 +274,23 @@
         <section>
             <div id="introbox">
                 <div id="bbox">
-                    <img src="./img/仙翁.JPG">
+                    <img id="left" src="./img/女人及車子.jpg">
                     <article id="arti">dsadsa</article>
                 </div>
                 <div id="box"></div>
                 <div id="bbox">
                     <article id="arti">fjksie</article>
-                    <img id="right" src="./img/海.JPG">
+                    <img id="right" src="./img/正面花.jpg">
                 </div>
                 <div id="box"></div>
                 <div id="bbox">
-                    <img src="./img/樹牌.JPG">
+                    <img id="left" src="./img/金髮美女.jpg">
                     <article id="arti">asjkls</article>
                 </div>
                 <div id="box"></div>
                 <div id="bbox">
                     <article id="arti">jekliao</article>
-                    <img id="right" src="./img/背影3人橫.JPG">
+                    <img id="right" src="./img/背景花.jpg">
                 </div>
             </div>
         </section>
